--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
     </div>
     <br><br><br>
     <div class="container">
-      <div class="row align-items-center border-top border-light">
-        <div class="col-lg-6 text-center topping">
+      <div class="row justify-content-center border-top">
+        <div class="col-lg-3 text-center topping">
+            <div class="box">
                 <div class="splashPic3"></div>
+            </div>
         </div>
         <div class="col-lg-6 text-center topping">
           <h2 class="splashHeading text-uppercase text-white">Live and On-demand Classes</h2><br>
@@ -113,11 +115,35 @@
       </div>
     </div>
     <br><br><br>
-    <div class="container">
-      <div class="row align-items-center border-top border-light">
-        <div class="col-lg-12 text-center topping">
-          <h2 class="splashHeading text-uppercase text-white">FAQ</h2><br>
-            <p class="text-white splashText">Reflect™ is unique training experience that brings live and on demand personal trainers into your home.</p>
+    <div class="container text-center">
+      <div class="row justify-content-center border-top border-light">
+        <div class="col-lg-9 topping">
+          <h2 class="splashHeading text-uppercase text-white">Frequently Asked Questions</h2>
+            <br>
+            <p class="text-white splashText"></p>
+            
+            <button class="accordion">What is Reflect?</button>
+            <div class="panel splashText">
+                <br>
+              <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.
+                  <br><br>
+            You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!</p>
+                <br>
+            </div>
+
+            <button class="accordion">How much does Reflect cost?</button>
+            <div class="panel splashText">
+                <br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <br>
+            </div>
+
+            <button class="accordion">How do I cancel?</button>
+            <div class="panel splashText">
+                <br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <br>
+            </div>
         </div> 
       </div>
     </div>
@@ -220,7 +246,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
+  <script src="js/agency.min.js"></script>
 
 </body>
 
