splash page update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="row">
             <div class="col" ><div class="echelonLogo-2"></div></div>
             <div class="w-100"></div>
-            <div class="col" ><div class="logoy-2"></div></div>
+            <div class="col" ><div class="logo-splash"></div></div>
           </div>
         </div>
         
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row justify-content-center border-top">
         <div class="col-lg-6 text-center topping">
-          <h2 class="splashHeading text-uppercase text-white">Heart Rate - "Heart-Track" Technology</h2><br>
+          <h2 class="splashHeading text-uppercase text-white">Heart-Track Technology</h2><br>
             <p class="text-white splashText">Reflects leader-board, lets you compete with others by the second, using the Echelon “Heart-track” heart rate tracking system.</p>
         </div> 
         <div class="col-lg-3 text-center topping">
@@ -110,7 +110,7 @@
         </div>
         <div class="col-lg-6 text-center topping">
           <h2 class="splashHeading text-uppercase text-white">Live and On-demand Classes</h2><br>
-            <p class="text-white splashText">Reflect™ is unique training experience that brings live and on demand personal trainers into your home. Strength training, Core, Yoga, Pilates, Meditation, and more are available, right in the comforts of your home.</p>
+            <p class="text-white splashText"> Strength training, Core, Yoga, Pilates, Meditation, and more are available, right in the comforts of your home.</p>
         </div> 
       </div>
     </div>
