changes to splash page alignment, font size, font weight, changes to plan page and mobile view

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
               <div class="col-lg-6">
                 <div class="p-5" style="padding: 2rem !important">
                   <div class="text-center">
-                    <h1 class="splashHeading mb-4 text-white" style="white-space: nowrap;">All of Reflect.</h1>
-                    <h1 class="splashHeading mb-4 text-white" style="white-space: nowrap;">Free for 14 days.</h1>
+                    <h1 class="splashHeading mb-4 text-white">All of Reflect.</h1>
+                    <h1 class="splashHeading mb-4 text-white">Free for 14 days.</h1>
                   </div>
                   <form class="user" method="post">
                       <div class="text-left">
@@ -89,9 +89,9 @@
     
     <div class="container">
       <div class="row justify-content-center border-top">
-        <div class="col-lg-6 text-center topping">
+        <div class="col-lg-6 text-center align-self-center topping">
           <h2 class="splashHeading text-uppercase text-white">Heart-Track Technology</h2><br>
-            <p class="text-white splashText">Reflects leader-board, lets you compete with others by the second, using the Echelon “Heart-track” heart rate tracking system.</p>
+            <p class="text-white text-left splashText">Reflects leader-board, lets you compete with others by the second, using the Echelon “Heart-track” heart rate tracking system.</p>
         </div> 
         <div class="col-lg-3 text-center topping">
             <div class="box">
@@ -103,22 +103,22 @@
     <br><br><br>
     <div class="container">
       <div class="row justify-content-center border-top">
-        <div class="col-lg-3 text-center topping">
+        <div class="col-lg-3 topping">
             <div class="box">
                 <div class="splashPic3"></div>
             </div>
         </div>
-        <div class="col-lg-6 text-center topping">
+        <div class="col-lg-6 align-self-center text-center topping">
           <h2 class="splashHeading text-uppercase text-white">Live and On-demand Classes</h2><br>
-            <p class="text-white splashText"> Strength training, Core, Yoga, Pilates, Meditation, and more are available, right in the comforts of your home.</p>
+            <p class="text-white text-left splashText"> Strength training, Core, Yoga, Pilates, Meditation, and more are available, right in the comforts of your home.</p>
         </div> 
       </div>
     </div>
     <br><br><br>
     <div class="container text-center">
       <div class="row justify-content-center border-top border-light">
-        <div class="col-lg-9 topping">
-          <h2 class="splashHeading text-uppercase text-white">Frequently Asked Questions</h2>
+        <div class="col-lg-8 topping">
+          <h2 class="splashHeading text-white">Frequently Asked Questions</h2>
             <br>
             <p class="text-white splashText"></p>
             
@@ -156,6 +156,10 @@
               <p>You can enjoy all classes and features on Reflect for 14 days and can cancel at anytime.</p>
                 <br>
             </div>
+            <br><br>
+            <button type="submit" class="btn btn-danger btn-block signupbtn shrinkText">
+                      REFLECT FREE FOR 14 DAYS
+            </button>
         </div> 
       </div>
     </div>
