updated photos, logo, and alignment of such

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         
-      <a class="btn signinText splashSignIn" href="login.html">Sign In</a>
+      <a class="btn btn-danger btn-user signinText splashSignIn" href="login.html">Sign In</a>
     </div>
     
 </nav>
